--- a/react_study/package.json
+++ b/react_study/package.json
@@ -7,8 +7,10 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
+    "swiper": "^11.2.0",
     "web-vitals": "^4.2.4",
     "webpack-dev-server": "^5.2.0"
   },
