--- a/react_study/package.json
+++ b/react_study/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "json-server": "^1.0.0-beta.3",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.2.0",
     "web-vitals": "^4.2.4",
     "webpack-dev-server": "^5.2.0"
