--- a/react_study/package.json
+++ b/react_study/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "json-server": "^1.0.0-beta.3",
